--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mark-cell",
-    "version": "0.2.0",
+    "version": "0.2.3",
     "license": "LGPL-3.0",
     "author": "shiy2008@gmail.com",
     "description": "General MDX to TSX converter",
@@ -12,7 +12,7 @@
         "react",
         "web-cell"
     ],
-    "homepage": "https://github.com/EasyWebApp/MarkCell",
+    "homepage": "https://github.com/EasyWebApp/MarkCell#readme",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/EasyWebApp/MarkCell.git"
@@ -22,31 +22,34 @@
     },
     "bin": "dist/index.js",
     "dependencies": {
-        "commander": "^4.1.0",
-        "mdast-util-to-hast": "^7.0.0",
+        "commander": "^4.1.1",
+        "highlight.js": "^9.18.1",
+        "mdast-util-to-hast": "^8.1.0",
+        "rehype-parse": "^6.0.2",
         "remark-frontmatter": "^1.3.2",
-        "remark-mdx": "^1.5.3",
+        "remark-mdx": "^1.5.7",
         "remark-parse": "^7.0.2",
         "remark-stringify": "^7.0.4",
         "toml": "^3.0.0",
         "unified": "^8.4.2",
-        "yaml": "^1.7.2"
+        "yaml": "^1.8.2"
     },
     "devDependencies": {
+        "@types/highlight.js": "^9.12.3",
+        "@types/node": "^13.9.1",
         "@types/yaml": "^1.2.0",
-        "husky": "^3.1.0",
-        "lint-staged": "^9.5.0",
+        "husky": "^4.2.3",
+        "lint-staged": "^10.0.8",
         "prettier": "^1.19.1",
-        "typescript": "^3.7.4"
+        "typescript": "^3.8.3"
     },
     "prettier": {
         "singleQuote": true,
         "tabWidth": 4
     },
     "lint-staged": {
-        "*.{md,json,ts}": [
-            "prettier --write",
-            "git add"
+        "*.{md,mdx,json,ts}": [
+            "prettier --write"
         ]
     },
     "scripts": {
