--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mark-cell",
-    "version": "0.2.3",
+    "version": "0.3.0",
     "license": "LGPL-3.0",
     "author": "shiy2008@gmail.com",
     "description": "General MDX to TSX converter",
@@ -22,9 +22,9 @@
     },
     "bin": "dist/index.js",
     "dependencies": {
-        "commander": "^4.1.1",
-        "highlight.js": "^9.18.1",
+        "commander": "^5.0.0",
         "mdast-util-to-hast": "^8.1.0",
+        "prismjs": "^1.19.0",
         "rehype-parse": "^6.0.2",
         "remark-frontmatter": "^1.3.2",
         "remark-mdx": "^1.5.7",
@@ -35,8 +35,8 @@
         "yaml": "^1.8.2"
     },
     "devDependencies": {
-        "@types/highlight.js": "^9.12.3",
         "@types/node": "^13.9.1",
+        "@types/prismjs": "^1.16.0",
         "@types/yaml": "^1.2.0",
         "husky": "^4.2.3",
         "lint-staged": "^10.0.8",
