--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mark-cell",
-    "version": "0.4.0-alpha.0",
+    "version": "0.4.0",
     "license": "LGPL-3.0",
     "author": "shiy2008@gmail.com",
     "description": "General MDX to TSX converter",
@@ -21,35 +21,41 @@
         "url": "https://github.com/EasyWebApp/MarkCell/issues"
     },
     "bin": "dist/index.js",
+    "engines": {
+        "node": "^10.0.0"
+    },
     "dependencies": {
         "commander": "^5.0.0",
         "jsdom": "^16.2.1",
         "mdast-util-to-hast": "^8.1.0",
         "prismjs": "^1.19.0",
         "rehype-parse": "^6.0.2",
-        "remark-frontmatter": "^1.3.2",
+        "remark-frontmatter": "^1.3.3",
         "remark-mdx": "^1.5.7",
         "remark-parse": "^7.0.2",
         "remark-stringify": "^7.0.4",
         "toml": "^3.0.0",
-        "ts-node": "^8.7.0",
+        "ts-node": "^8.8.1",
         "typescript": "^3.8.3",
         "unified": "^8.4.2",
         "web-cell": "^2.0.0-rc.20",
-        "yaml": "^1.8.2"
+        "web-utility": "^0.12.1",
+        "yaml": "^1.8.3"
     },
     "devDependencies": {
-        "@types/jsdom": "^16.1.0",
-        "@types/node": "^13.9.1",
+        "@types/jsdom": "^16.1.1",
+        "@types/node": "^13.9.3",
         "@types/prismjs": "^1.16.0",
         "@types/yaml": "^1.2.0",
         "husky": "^4.2.3",
-        "lint-staged": "^10.0.8",
-        "prettier": "^1.19.1",
+        "lint-staged": "^10.0.9",
+        "prettier": "^2.0.2",
         "snabbdom": "^0.7.4"
     },
     "prettier": {
         "singleQuote": true,
+        "trailingComma": "none",
+        "arrowParens": "avoid",
         "tabWidth": 4
     },
     "lint-staged": {
