--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mark-cell",
-    "version": "0.4.8",
+    "version": "0.4.9",
     "license": "LGPL-3.0",
     "author": "shiy2008@gmail.com",
     "description": "General MDX to TSX/HTML converter, inspired by Hexo & Gatsby",
@@ -28,40 +28,39 @@
         "node": ">= 10.0.0"
     },
     "dependencies": {
-        "@peculiar/webcrypto": "^1.1.4",
         "commander": "^6.2.1",
-        "jsdom": "^16.4.0",
+        "jsdom": "^19.0.0",
         "mdast-util-to-hast": "^9.1.2",
-        "prismjs": "^1.23.0",
-        "regenerator-runtime": "^0.13.7",
+        "prismjs": "^1.26.0",
+        "regenerator-runtime": "^0.13.9",
         "rehype-parse": "^7.0.1",
         "remark-frontmatter": "^2.0.0",
         "remark-mdx": "^1.6.22",
         "remark-parse": "^8.0.3",
         "remark-stringify": "^8.1.1",
         "toml": "^3.0.0",
-        "ts-node": "^9.1.1",
+        "ts-node": "^10.4.0",
         "ts-transform-asset": "^3.1.0",
         "ts-transform-css-modules": "^0.3.3",
-        "ttypescript": "^1.5.12",
-        "typescript": "^4.1.3",
-        "unified": "^9.2.0",
-        "web-cell": "^2.3.0-beta.6",
-        "web-utility": "^2.4.1",
-        "yaml": "^1.10.0"
+        "ttypescript": "^1.5.13",
+        "typescript": "~4.3.5",
+        "unified": "^9.2.2",
+        "web-cell": "^2.3.0",
+        "web-utility": "^3.0.0",
+        "yaml": "^1.10.2"
     },
     "devDependencies": {
-        "@types/jsdom": "^16.2.5",
-        "@types/node": "^14.14.20",
-        "@types/prismjs": "^1.16.2",
+        "@types/jsdom": "^16.2.14",
+        "@types/node": "^14.18.10",
+        "@types/prismjs": "^1.26.0",
         "@types/yaml": "^1.9.7",
-        "element-internals-polyfill": "^0.1.1",
-        "husky": "^4.3.6",
-        "koapache": "^2.1.1",
-        "lint-staged": "^10.5.3",
-        "prettier": "^2.2.1",
+        "element-internals-polyfill": "^0.1.54",
+        "husky": "^7.0.4",
+        "koapache": "^2.2.1",
+        "lint-staged": "^12.3.3",
+        "prettier": "^2.5.1",
         "snabbdom": "^2.1.0",
-        "typedoc": "^0.20.12"
+        "typedoc": "^0.22.11"
     },
     "prettier": {
         "singleQuote": true,
@@ -80,9 +79,5 @@
         "start": "npm run debug  &&  web-server test/public/ -o",
         "pack-docs": "typedoc source/",
         "prepublishOnly": "npm run lint  &&  npm test  &&  npm run pack-docs"
-    },
-    "husky": {
-        "pre-commit": "npm run lint",
-        "pre-push": "npm test  &&  npm run pack-docs"
     }
 }
